tests/negative/abilities/invalid_test_context.orng
// invalid_test_context.orng:7:31: error: can't request this context
// test "my test" with My_Ability {
//                              ^
// 
abilityMy_Ability = Int

test "my test" with My_Ability {
    .ok
}